k8s-deployment/kong-gateway/codekids-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codekids-api-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: codekids.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: java-backend
                port:
                  number: 8080
          - path: /py
            pathType: Prefix
            backend:
              service:
                name: python-backend
                port:
                  number: 5000
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
